objects/Ispezione_II_Livello__c.object
<CustomObject>
    <fields>
        <fullName>CQS_IspIIL_AL1_Note_Design_Supervision_C__c</fullName>
        <label>Note Design Supervision &amp; Control</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_Note_PermitManagement__c</fullName>
        <label>Note Permit Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_Note_PlanningProgramMan__c</fullName>
        <label>Note Planning &amp; Program Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_Note_Service__c</fullName>
        <label>Note Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_RispettoTempiEsec__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>La risorsa verifica il rispetto dei tempi di esecuzione (verifica cronoprogramma, attività di walkin/walkout, ottenimento permessi, collaudi ecc)</inlineHelpText>
        <label>Rispetto tempi esecuzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_RispettoVincoliBudget__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>La risorsa verifica il rispetto dei vincoli di budget</inlineHelpText>
        <label>Rispetto vincoli di budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_StrumEmezzi_okIncarico__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>Vengono messi a disposizione strumenti e mezzi adeguati allo svolgimento dell’incarico</inlineHelpText>
        <label>Strumenti e mezzi adeguati per incarico</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_SuppConsManDL__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>La risorsa supporta il Construction Management e DL</description>
        <inlineHelpText>La risorsa svolge attività di supporto al Construction Management e alla direzione lavori</inlineHelpText>
        <label>Supporta il Construction Management e DL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_SuppRapp_EntiAmmCond__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>La risorsa supporta le imprese ed OF nei rapporti con gli enti, le amministrazioni ed i condomini</inlineHelpText>
        <label>Supporto rapporti enti amm.ni condomini</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_Tracciabilit_infoEdoc__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>La risorsa verifica la tracciabilità delle informazioni e della documentazione</inlineHelpText>
        <label>Tracciabilità info e documentazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_AL1_VerOpera_conformeProg__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <inlineHelpText>La risorsa verifica la conformità dell’opera realizzata rispetto agli elaborati progettuali</inlineHelpText>
        <label>Verifica opera conforme a progetto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_Service2__c</fullName>
        <description>To delete</description>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_IspIIL_Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service</label>
        <referenceTo>CQS_SocietaServices__c</referenceTo>
        <relationshipName>Ispezioni_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ispezione Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CQS_Isp2L_Progetto__c</columns>
        <columns>CQS_Isp2L_LDO__c</columns>
        <columns>CQS_Isp2L_Comune__c</columns>
        <columns>CQS_IspIIL_Service2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IspIIL{0000}</displayFormat>
        <label>Ispezione II Livello Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ispezioni Services</pluralLabel>
    <recordTypes>
        <fullName>CQS_IspIIL_AL1_Verifica_Rispetto_Adempimenti_Contrattuali_SocietaServizio</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato1 relativo alle Verifiche del Rispetto degli Adempimenti Contrattuali delle Società di Servizio  effettuate dagli Ispettori di II Livello</description>
        <label>Verifica Rispetto Adempimenti Contrattuali Societa di Servizio</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIIL_AL2_Verifica_Rispetto_Adempimenti_Contrattuali_RL</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato2 relativo alle Verifiche del Rispetto degli Adempimenti Contrattuali degli RL effettuate dall&apos;Ispettore di II Livello</description>
        <label>Verifica Rispetto Adempimenti Contrattuali RL</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIIL_AL3_Verifica_Rispetto_Adempimenti_Contrattuali_DL</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato3 relativo alle Verifiche del Rispetto degli Adempimenti Contrattuali dei DL effettuate dagli Ispettori di II Livello</description>
        <label>Verifica Rispetto Adempimenti Contrattuali DL</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIIL_AL4_Verifica_Rispetto_Adempimenti_Contrattuali_CSE</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato4 relativo alle Verifiche del Rispetto degli Adempimenti Contrattuali dei CSE effettuate dagli Ispettori di II Livello</description>
        <label>Verifica Rispetto Adempimenti Contrattuali CSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIL_AL1VerificaRispettoAdempimentiContrattualiSS</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato1 relativo alle Verifiche del Rispetto degli Adempimenti Contrattuali delle Società di Servizio effettuate dai CM</description>
        <label>Verifica I Livello Rispetto Adempimenti Contrattuali Societa di Servizio</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIL_AL2VerificaRispettoAdempimentiContrattualiRL</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato2 relativo alle Verifiche di I Livello del Rispetto degli Adempimenti Contrattuali degli RL effettuate dai CM</description>
        <label>Verifica I Livello Rispetto Adempimenti Contrattuali RL</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIL_AL3VerificaRispettoAdempimentiContrattualiDL</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato3 relativo alle Verifiche di I Livello del Rispetto degli Adempimenti Contrattuali dei DL effettuate dai CM</description>
        <label>Verifica I Livello Rispetto Adempimenti Contrattuali DL</label>
    </recordTypes>
    <recordTypes>
        <fullName>CQS_IspIL_AL4VerificaRispettoAdempimentiContrattualiCSE</fullName>
        <active>true</active>
        <description>Recordtype per l&apos;allegato4 relativo alle Verifiche del Rispetto degli Adempimenti Contrattuali dei CSE effettuate dai CM</description>
        <label>Verifica I Livello Rispetto Adempimenti Contrattuali CSE</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>